@@ -10,6 +10,7 @@
 - offpunk: add list autocompletion to "tour"
 - offpunk: removed "blackbox", which has not been used nor maintained
 - offpunk: "gus" was broken, it is functionnal again
+- opnk/offpunk: more informative prompt in less
 
 ## 2.1 - December 15th 2023
 - freshly updated gemtext/rss links are highlighted ("new_link" theme option)
